Add html Plushies, Quote, Action And Footer

--- a/index.html
+++ b/index.html
@@ -42,18 +42,23 @@
             <div class="plushies">
                 <div class="shark">
                     <img src="img/" alt="Shark Plushy">
+                    <div class="story"> story behind blahahaha </div>
+
                 </div>
 
                 <div class="elephant">
                     <img src="img/" alt="Elephant Plushy">
+                    <div class="story">story aaaa so much</div>
                 </div>
 
                 <div class="sea-turtle">
                     <img src="img/" alt="Sea Turtle Plushy">
+                    <div class="story">Jk and Jrr are jealous blah blah </div>
                 </div>
 
                 <div class="gorilla">
                     <img src="img/" alt="Gorilla Plushy">
+                    <div class="story">gorillas are actually really endagered :( lets help </div>
                 </div>
 
             </div>
@@ -62,17 +67,29 @@
 
 
          <div class="quote">
+            <div class="text">"these plushies CHANGED MY GODAMN LIFE"</div>
+            <div class="source">- Ivette</div>
 
          </div>
 
 
          <div class="action">
+            <div class="container">
+                <h2 class="title">It is time!</h2>
+                <div class="text">sign up by clicking my button plz</div>
+
+                <div>
+                <a href="https://bit.ly/3UqlAje"><button class="button">WOOO SIGN UP</button></a>
+                </div>
+            </div>
 
          </div>
 
 
          <div class="footer">
-
+            <div>
+                odin project copyright
+            </div>
          </div>
 
 
