Add Flexbox And CSS To Header

--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
         <title>Plushy</title>
     </head>
     <body>
-        <div class="Page">
 
          <div class="header">
 
             <div class="left-header">
-            <img src="img/" alt="Plushy Logo">
+            <a href="index.html"><img class="logo" src="img/logo.webp" alt="Plushy Logo"></a>
             </div>
 
-            <div class="right header">
+            <div class="right-header">
             <ul>
                 <li><a href="https://bit.ly/3UqlAje">About Us</a></li>
                 <li><a href="https://bit.ly/3UqlAje">HELP AAA IT BURNS</a></li>
@@ -92,8 +91,6 @@
             </div>
          </div>
 
-
-        </div>
 
     </body>
 </html>
