Add CSS Formatting To "Pitch" and "Items"
Add flexbox layout and animal images to "Items";
improved readability in "Pitch"

--- a/index.html
+++ b/index.html
@@ -4,72 +4,89 @@
         <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Plushy</title>
+        <title>EcoPals</title>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
     <body>
 
          <div class="header">
 
             <div class="left-header">
-            <a href="index.html"><img class="logo" src="img/logo.webp" alt="Plushy Logo"></a>
+            <a href="index.html"><img class="logo" src="img/logo.webp" alt="Plushy Logo">
+            <div class="text">EcoPals</div></a>
             </div>
 
             <div class="right-header">
             <ul>
-                <li><a href="https://bit.ly/3UqlAje">About Us</a></li>
-                <li><a href="https://bit.ly/3UqlAje">HELP AAA IT BURNS</a></li>
-                <li><a href="https://bit.ly/3UqlAje">Support</a></li>
+                <li><a href="https://bit.ly/3UqlAje" target="_blank">About Us</a></li>
+                <li><a href="https://bit.ly/3UqlAje" target="_blank">HELP AAA IT BURNS</a></li>
+                <li><a href="https://bit.ly/3UqlAje" target="_blank">Support</a></li>
             </ul>
             </div>
          </div>
 
 
          <div class="pitch">
+            <div class="left-pitch">
             <h1 class="title">Plushies that Make a Difference</h1>
-            <div class="text">blah blah placeholder</div>
+            <div class="text-discalamer">
+                <p><strong>Disclamer:</strong> This is a <em>Fake Product</em> and a <em>Test Website</em>, but if you would like to donate to some real causes here are some legitamate foundations :)  </p>
+                <div class="donation-links"> 
+                    <ul>
+                        <a href="https://www.worldwildlife.org/" target="_blank">World Wildlife Fund</a>
+                        <a href="https://oceana.org/" target="_blank">Oceana</a>
+                        <a href="https://www.wcs.org/" target="_blank">Wildlife Conservation Society </a>
+                        <a href="https://www.nature.org/en-us/" target="_blank">The Nature Conservancy </a>
+                    </ul>
+                </div>
+            </div>
+            <p>Our plushys give kids a companion while also making the world a better place! With every purchase 50% of all prophits go to the foundation that supports each endangered animal the most, to do as much good as possible.</p>
             <div class="button">
-                <a href="https://bit.ly/3UqlAje"><button>Sign Up</button></a>
+                <button><a href="https://bit.ly/3UqlAje" target="_blank"><bold>Sign Up</bold></a></button>
             </div>
-            <div class="image">
-                <img src="img/" alt="Picture of The Earth">
+        </div>
+        <div class="earth">
+                <img class="image" src="img/earth.jpeg" alt="Picture of The Earth">
             </div>
-         </div>
+</div>
+
 
 
          <div class="items">
             <h2>In Stock</h2>
             <div class="plushies">
-                <div class="shark">
-                    <img src="img/" alt="Shark Plushy">
-                    <div class="story"> story behind blahahaha </div>
+                <div class="plush shark"><a href="https://bit.ly/3UqlAje" target="_blank">
+                    <img src="img/whale-shark.jpg" alt="Shark Plushy">
+                    <div class="story">Get this super soft whale shark plushy to celebrate the biggest fish in the ocean! Despite having the fearsome title of 'shark,' it actually feeds mostly on plankton.</div>
 
-                </div>
+                </a></div>
 
-                <div class="elephant">
-                    <img src="img/" alt="Elephant Plushy">
-                    <div class="story">story aaaa so much</div>
-                </div>
+                <div class="plush elephant"><a href="https://bit.ly/3UqlAje" target="_blank">
+                    <img src="img/elephant.jpg" alt="Elephant Plushy">
+                    <div class="story">These gentle giants are even gentler in plush form! Try looking at it in a mirror because elephants are one of the only species able to recognize themselves, showing serious self-awareness.</div>
+                </a></div>
 
-                <div class="sea-turtle">
-                    <img src="img/" alt="Sea Turtle Plushy">
-                    <div class="story">Jk and Jrr are jealous blah blah </div>
-                </div>
+                <div class="plush sea-turtle"><a href="https://bit.ly/3UqlAje" target="_blank">
+                    <img src="img/sea-turtle.jpg" alt="Sea Turtle Plushy">
+                    <div class="story">Despite their seemingly tough shell, we promise this plush to be as snuggly as ever! Although sea turtles breathe air, they can hold their breath for over 7 hours and spend most of their lives underwater.</div>
+                </a></div>
 
-                <div class="gorilla">
-                    <img src="img/" alt="Gorilla Plushy">
-                    <div class="story">gorillas are actually really endagered :( lets help </div>
-                </div>
-
-            </div>
+                <div class="plush gorilla"><a href="https://bit.ly/3UqlAje" target="_blank">
+                    <img src="img/gorilla.jpg" alt="Gorilla Plushy">
+                    <div class="story">Gorillas are some of the most emotionally intelligent animals in the world. They share 98% of their DNA with us, so why not bring home a lil buddy who truly gets you!</div>
+                </a></div>
          </div>
 
-
+</div>
 
          <div class="quote">
             <div class="text">"these plushies CHANGED MY GODAMN LIFE"</div>
             <div class="source">- Ivette</div>
 
          </div>
+
+
+
 
 
          <div class="action">
