Add CSS To "Quote" "Action" "Header"; Add README

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>EcoPals</title>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     </head>
     <body>
 
@@ -41,9 +41,9 @@
                 </div>
             </div>
             <p>Our plushys give kids a companion while also making the world a better place! With every purchase 50% of all prophits go to the foundation that supports each endangered animal the most, to do as much good as possible.</p>
-            <div class="button">
-                <button><a href="https://bit.ly/3UqlAje" target="_blank"><bold>Sign Up</bold></a></button>
-            </div>
+            <a href="https://bit.ly/3UqlAje" target="_blank"><div class="button">
+                Sign Up
+         </div></a>
         </div>
         <div class="earth">
                 <img class="image" src="img/earth.jpeg" alt="Picture of The Earth">
@@ -80,9 +80,8 @@
 </div>
 
          <div class="quote">
-            <div class="text">"these plushies CHANGED MY GODAMN LIFE"</div>
+            <div class="text">"These plushies are so incredible that now everything I own is a plushy, my bed, my dresser, my home, my family....It Is All Plushy...ha...haHa"</div>
             <div class="source">- Ivette</div>
-
          </div>
 
 
@@ -91,20 +90,21 @@
 
          <div class="action">
             <div class="container">
-                <h2 class="title">It is time!</h2>
-                <div class="text">sign up by clicking my button plz</div>
-
-                <div>
-                <a href="https://bit.ly/3UqlAje"><button class="button">WOOO SIGN UP</button></a>
-                </div>
+                <div class="container-left">
+                <h2 class="title">It is Plushy Time!</h2>
+                <div class="text">Sign up for a newsletter for updates on when we get new animals in stock.</div>
             </div>
 
-         </div>
+         <a href="https://bit.ly/3UqlAje" target="_blank"><div class="button">
+                Sign Up
+         </div></a>
+    </div>
+</div>
 
 
          <div class="footer">
-            <div>
-                odin project copyright
+            <div class="copyright">
+                Copyright © The Odin Project 2021
             </div>
          </div>
 
